<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:orientation="vertical"
                                              android:background="#CCBECD"
                                              android:layout_width="match_parent"
                                              android:layout_margin="8dp"
                                              android:padding="8dp"
                                              android:paddingLeft="8dp"
                                              android:paddingTop="8dp"
                                              android:paddingBottom="8dp"
                                              android:paddingRight="8dp"
                                              android:layout_height="match_parent"
                                              tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_my_bio"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center" android:visibility="gone"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="#551B1B"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/mypic_resized"
            android:id="@+id/imageView5" android:padding="8dp" android:paddingLeft="8dp" android:paddingTop="8dp"
            android:paddingBottom="8dp" android:paddingRight="8dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hind_suleiman_hussein"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:id="@+id/text"
            android:textColor="#3A0843"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              android:hint="@string/enter_your_hobbies"
              android:id="@+id/edtName" android:minHeight="48dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="20dp"
            android:id="@+id/btnSend"
            android:layout_gravity="center"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:textSize="28sp"
              android:fontFamily="serif"
              android:visibility="gone"
              android:gravity="center"
              android:id="@+id/alterThisOne"
              android:textColor="#3A0843"/>

    <ScrollView android:layout_width="wrap_content"
                android:layout_height="50dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:lineSpacingMultiplier="1"
                  android:text="@string/i_am_a_computer_science_student_in_my_third_year_interested_in_mobile_app_development_web_development_and_ux_ui_design"
                  android:textColor="#3A0843"/>

    </ScrollView>




</androidx.appcompat.widget.LinearLayoutCompat>